--- a/WebServiceREST/WebContent/WEB-INF/web.xml
+++ b/WebServiceREST/WebContent/WEB-INF/web.xml
@@ -3,12 +3,14 @@
   <display-name>WebServiceREST</display-name>
 	<servlet>
 		<servlet-name>jersey-serlvet</servlet-name>
-		<servlet-class>
-                     com.sun.jersey.spi.container.servlet.ServletContainer
-                </servlet-class>
+		<servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
 		<init-param>
-		     <param-name>com.sun.jersey.config.property.packages</param-name>
-		     <param-value>br.com.quixada.server</param-value>
+			<param-name>com.sun.jersey.config.property.packages</param-name>
+			<param-value>br.com.quixada.server</param-value>
+		</init-param>
+		<init-param>
+			<param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
+			<param-value>true</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
